--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.1",
-    "sequelize": "^6.33.0",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.35.0",
     "sequelize-cli": "^6.6.1",
     "sequelize-typescript": "^2.1.5",
     "swagger-autogen": "^2.23.6",
@@ -41,7 +43,8 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "@types/node": "^20.6.3",
+    "@types/node": "^20.9.0",
+    "@types/validator": "^13.11.6",
     "nodemon": "^3.0.1"
   }
 }
