--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
-DB_HOST=t07cxyau6qg7o5nz.cbetxkdyhwsb.us-east-1.rds.amazonaws.com
+DB_HOST=localhost
 DB_PORT=3306
-DB_USERNAME=iw9udt86y3jy0zuk
-DB_PASSWORD=yg8j2f7iijtctj4m
-DB_NAME=v3hiipw9cmzklvfs
+DB_USERNAME=root
+DB_PASSWORD=root
+DB_NAME=tours-travels
