--- a/package.json
+++ b/package.json
@@ -46,5 +46,9 @@
     "@types/node": "^20.9.0",
     "@types/validator": "^13.11.6",
     "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=20.6.1",
+    "npm": ">=9.8.1"
   }
 }
