--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "nodemon": "^3.0.1"
   },
   "engines": {
-    "node": ">=20.6.1",
-    "npm": ">=9.8.1"
+    "node": "v20.8.0",
+    "npm": "10.1.0"
   }
+  
 }
