--- a/package.json
+++ b/package.json
@@ -22,15 +22,24 @@
     "bcryptjs": "^2.4.3",
     "blob-util": "^2.0.2",
     "body-parser": "^1.20.2",
+    "cheerio": "^1.0.0-rc.12",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
+    "csv-writer": "^1.6.0",
     "dotenv": "^16.3.1",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "hbs": "^4.2.0",
+    "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.2",
+    "mkdirp": "^1.0.4",
+    "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
     "next": "^14.0.3",
+    "puppeteer-html-pdf": "^3.0.3",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.35.1",
     "sequelize-cli": "^6.6.1",
@@ -40,11 +49,13 @@
     "swagger-ui-express": "^5.0.0",
     "ts-node": "^10.9.1",
     "tsc-watch": "^6.0.4",
+    "turndown": "^7.1.2",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.9.0",
+    "@types/turndown": "^5.0.4",
     "@types/validator": "^13.11.6",
     "nodemon": "^3.0.1"
   },
