--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "tsc --build tsconfig.json --watch",
-    "start": "tsc-watch --onSuccess \"node ./dist/app.js\""
+    "start": "tsc-watch --onSuccess \"node ./dist/app.js\"",
+    "heroku-postbuild": "mkdir ./.cache && mv /app/.cache/puppeteer ./.cache"
+
   },
+
+  
   "keywords": [],
   "author": "",
   "license": "ISC",
